--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,13 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
+    "chart.js": "^2.9.4",
     "core-js": "^3.9.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "nuxt": "^2.15.3",
-    "nuxt-buefy": "^0.4.4"
+    "nuxt-buefy": "^0.4.4",
+    "vue-chartjs": "^3.5.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^6.0.0",
@@ -27,7 +31,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.7.0",
     "node-sass": "4.14.1",
-    "sass-loader": "8.0.2",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "sass-loader": "8.0.2"
   }
 }
